Propagate registration not found errors
