# api/openapi/registration.yaml
@@ -47,6 +47,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+        "404":
+          description: IFC user not found in Infinite Flight
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
         "401":
           description: Missing or invalid X-API-Key authentication
           content:
